# neutrino_kernel_google_caimito

./: .bazelrc  .gitignore  .gitmodules  BUILD_GUIDE.md  Kconfig.ext  Makefile  README.md  WORKSPACE  build_kernel.sh  enable_modules.fragment  setup_toolchain.sh
drivers/KPatch-Next/user/: CMakeLists.txt  Makefile  kpatch.c  kpatch.h  kpextension.c  kpextension.h  kpm.c  kpm.h  main.c  rehook.c  rehook.h  supercall.h  supercall_ge0a04.h
google-modules/display/samsung/include/: BUILD.bazel
google-modules/gxp/zuma/: BUILD.bazel  Makefile  callisto-mcu.c  callisto-platform.c  callisto-pm.c  gxp-client.c  gxp-cmu.c  gxp-common-platform.c  gxp-config.h  gxp-dci.c  gxp-debug-dump.c  gxp-debug-dump.h  gxp-dmabuf.c  gxp-domain-pool.c  gxp-firmware-loader.c  gxp-firmware.c  gxp-firmware.h  gxp-gsx01-mailbox.c  gxp-iif.c  gxp-internal.h  gxp-kci.c  gxp-kci.h  gxp-mailbox-driver.c  gxp-mailbox-driver.h  gxp-mailbox.c  gxp-mailbox.h  gxp-mcu-firmware.c  gxp-mcu-firmware.h  gxp-mcu-fs.c  gxp-mcu-platform.c  gxp-mcu-telemetry.c  gxp-mcu.h  gxp-pm.c  gxp-thermal.c  gxp-uci.c  gxp-vd.c  gxp-vd.h
google-modules/gxp/zuma/callisto/: config-pwr-state.h  config.h  csrs.h
google-modules/gxp/zuma/gcip-kernel-driver/drivers/gcip/: Makefile  gcip-fault-injection.c  gcip-firmware.c  gcip-iommu.c  gcip-kci.c  gcip-mailbox.c  gcip-mem-pool.c  gcip-pm.c  gcip-resource-accessor.c  gcip-status-code.c  gcip-telemetry.c  gcip-usage-stats.c
google-modules/gxp/zuma/gcip-kernel-driver/drivers/gcip/iif/: iif-dma-fence.c  iif-fence-table.c  iif-fence.c  iif-manager.c
google-modules/gxp/zuma/gcip-kernel-driver/drivers/gcip/iif/include/iif/: iif-config.h  iif-dma-fence.h  iif-fence.h  iif-platform.h  iif.h
google-modules/gxp/zuma/gcip-kernel-driver/include/gcip/: gcip-fault-inject.h  gcip-iommu.h  gcip-kci.h  gcip-mem-pool.h  gcip-memory.h  gcip-pm.h  gcip-status-code.h  gcip-telemetry.h  gcip-usage-stats.h
google-modules/gxp/zuma/include/trace/events/: gxp.h
google-modules/sensors/hall_sensor/: BUILD.bazel  Makefile
google-modules/soc/gs/: BUILD.bazel  Makefile
google-modules/soc/gs/drivers/bts/: bts.h  exynos-bts.c
google-modules/soc/gs/drivers/cpufreq/: exynos-acme.h
google-modules/soc/gs/drivers/dma-buf/heaps/: Kconfig
google-modules/soc/gs/drivers/dma-buf/heaps/samsung/: gcma_heap.c  system_heap.c
google-modules/soc/gs/drivers/gpu/exynos/: Kconfig
google-modules/soc/gs/drivers/i2c/busses/: i2c-exynos5.c  i2c-exynos5.h
google-modules/soc/gs/drivers/iio/: Kconfig
google-modules/soc/gs/drivers/input/: Kconfig
google-modules/soc/gs/drivers/input/fingerprint/: gf_spi.c
google-modules/soc/gs/drivers/input/misc/: Kconfig
google-modules/soc/gs/drivers/iommu/: Kbuild  Kconfig  exynos-pcie-iommu-zuma.c  iovad-vendor-hooks.c
google-modules/soc/gs/drivers/media/platform/: Kconfig
google-modules/soc/gs/drivers/media/platform/exynos/: Kconfig
google-modules/soc/gs/drivers/media/platform/exynos/mfc/: mfc_core_isr.c  mfc_core_meerkat.c  mfc_core_nal_q.c  mfc_core_reg_api.c  mfc_core_reg_api.h  mfc_data_struct.h  mfc_dec_v4l2.c  mfc_queue.c  mfc_regs.h
google-modules/soc/gs/drivers/misc/: Kconfig
google-modules/soc/gs/drivers/pci/controller/dwc/: pcie-exynos-rc.c  pcie-exynos-zuma-rc-cal.c
google-modules/soc/gs/drivers/pci/controller/dwc-whi/: pcie-exynos-rc.c
google-modules/soc/gs/drivers/phy/: Kconfig
google-modules/soc/gs/drivers/phy/samsung/: eusb_repeater.c  phy-exynos-usbdrd.c
google-modules/soc/gs/drivers/pinctrl/: Kconfig
google-modules/soc/gs/drivers/pinctrl/gs/: pinctrl-exynos.c  pinctrl-samsung.h
google-modules/soc/gs/drivers/power/: Kconfig
google-modules/soc/gs/drivers/regulator/: s2mpg10-regulator.c  s2mpg11-regulator.c
google-modules/soc/gs/drivers/soc/google/: Kconfig  exynos-pd_hsi0.c  exynos-pm.c
google-modules/soc/gs/drivers/soc/google/acpm/fw_header/: common.h  framework.h
google-modules/soc/gs/drivers/soc/google/debug/: debug-snapshot-utils.c
google-modules/soc/gs/drivers/soc/google/gnssif_spi/: gnss_link_device.c  gnss_utils.h
google-modules/soc/gs/drivers/soc/google/pkvm-s2mpu/common/: pkvm_s2mpu.c
google-modules/soc/gs/drivers/soc/google/vh/kernel/: Kconfig
google-modules/soc/gs/drivers/soc/google/vh/kernel/mm/: vh_mm_init.c
google-modules/soc/gs/drivers/soc/google/vh/kernel/pixel_em/: pixel_em.c
google-modules/soc/gs/drivers/soc/google/vh/kernel/sched/: core.c  cpufreq_gov.c  fair.c  init.c  procfs_node.c  rt.c  sched_events.h  (+2 more)
google-modules/soc/gs/drivers/thermal/: Kconfig
google-modules/soc/gs/drivers/thermal/google/: Kconfig  cdev_uclamp.c
google-modules/soc/gs/drivers/thermal/samsung/: exynos_cpu_cooling.c  gs_tmu_v3.c
google-modules/soc/gs/drivers/tty/serial/: exynos_tty.c
google-modules/soc/gs/drivers/ufs/: Kbuild  ufs-pixel.c
google-modules/soc/gs/drivers/usb/: Kconfig
google-modules/soc/gs/drivers/usb/dwc3/: core-exynos.h  dwc3-exynos-otg.c  dwc3-exynos.c  exynos-otg.h
google-modules/soc/gs/drivers/usb/gadget/function/: f_etr_miu.c
google-modules/soc/gs/drivers/usb/host/: xhci-exynos.c  xhci-exynos.h  xhci-goog-dma.c  xhci-goog-dma.h
google-modules/soc/gs/drivers/usb/typec/: Kconfig
google-modules/soc/gs/drivers/usb/typec/tcpm/: Kconfig
google-modules/soc/gs/drivers/usb/typec/tcpm/google/: bc_max77759.c  google_tcpci_shim.c  google_tcpci_shim.h  tcpci_max77759.c  tcpci_max77759.h  usb_psy.c  usb_psy.h
google-modules/soc/gs/drivers/video/: Kconfig
google-modules/soc/gs/drivers/watchdog/: s3c2410_wdt.c
google-modules/soc/gs/include/dt-bindings/soc/google/: gs101-bcl.h  gs201-bcl.h  zuma-bcl.h  zumapro-bcl.h
google-modules/soc/gs/include/linux/mfd/samsung/: rtc-s2mpg10.h  s2mpg10-register.h  s2mpg12-register.h  s2mpg14-register.h  s2mpg1415-register.h
google-modules/soc/gs/include/linux/regulator/: pmic_class.h
google-modules/soc/gs/include/linux/usb/: dwc3-exynos.h
google-modules/soc/gs/include/misc/: sbbm.h
google-modules/soc/gs/include/soc/google/: exynos-pm.h  exynos_pm_qos.h
google-modules/video/gchips/: BUILD.bazel  Makefile  bigo.c  bigo_iommu.c  bigo_prioq.c  bigo_prioq.h
(+981 files in other folders)
