# SPDX-License-Identifier: GPL-2.0

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "hall_sensor",
    srcs = glob([
        "**/*.c",
        "**/*.h",
    ]) + [
        "//private/google-modules/soc/gs:gs_soc_headers",
    ],
    outs = [
        "hall_sensor.ko",
    ],
    kernel_build = "//private/devices/google/common:kernel",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
    deps = [
        "//private/google-modules/soc/gs:gs_soc_module",
    ],
)
