# SPDX-License-Identifier: GPL-2.0-or-later

load("//build/kernel/kleaf:kernel.bzl", "ddk_uapi_headers", "kernel_module")

ddk_uapi_headers(
    name = "uapi_headers",
    srcs = glob([
        "include/uapi/**/*.h",
    ]),
    out = "video.gchips-uapi-headers.tar.gz",
    kernel_build = "//private/devices/google/common:kernel",
    visibility = [
        "//private/devices/google:__subpackages__",
    ],
)

kernel_module(
    name = "video.gchips",
    srcs = glob([
        "**/*.c",
        "**/*.h",
    ]) + [
        "//private/google-modules/soc/gs:gs_soc_headers",
    ],
    outs = [
        "bigwave.ko",
    ],
    kernel_build = "//private/devices/google/common:kernel",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
    deps = [
        "//private/google-modules/soc/gs:gs_soc_module",
    ],
)
